--- a/appointmentsmanager.client/package.json
+++ b/appointmentsmanager.client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router": "^6.25.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
