--- a/appointmentsmanager.client/src/common/SampleFiles/pickproject.json
+++ b/appointmentsmanager.client/src/common/SampleFiles/pickproject.json
@@ -1,16 +1,56 @@
 [
   {
-    "project_id": 123,
-    "pu": "abc123",
-    "proj_desc": "description",
-    "Agency_name": "agency123"
+    "project_id": 2234,
+    "pu": "ADER",
+    "proj_desc": "desc",
+    "Agency_name": "first agency",
+    "Task_description": "task",
+    "Proc_Category": "TC",
+    "Bid_categroy": "N",
+    "Approval_cat": "A",
+    "MM": 4,
+    "YYYY": 1984,
+    "Rfp_number": 123,
+    "Procurement_Type": "12",
+    "Agency_add1": "PO",
+    "Agency_add2": "afgh st",
+    "Agency_city": "Raymond",
+    "Agency_state": "MS",
+    "Agency_zip5": 123,
+    "Agency_zip4": 456,
+    "Agency_department": "EX",
+    "Agency_use": "F",
+    "Contact_title": "MR",
+    "Contact_fname": "N P",
+    "Contact_mname": "",
+    "Contact_lname": "KKR",
+    "Contact_type": ""
   },
   {
     "project_id": 234,
-    "pu": "abc234",
-    "proj_desc": "description 234",
-    "Agency_name": "agency234"
+    "pu": "ADEaghR",
+    "proj_desc": "deashbsc",
+    "Agency_name": "second agency",
+    "Task_description": "task 123",
+    "Proc_Category": "TC AGh",
+    "Bid_categroy": "N",
+    "Approval_cat": "A",
+    "MM": 4,
+    "YYYY": 1984,
+    "Rfp_number": 123,
+    "Procurement_Type": "12",
+    "Agency_add1": "PO",
+    "Agency_add2": "afgh st",
+    "Agency_city": "Raymond",
+    "Agency_state": "MS",
+    "Agency_zip5": 123,
+    "Agency_zip4": 456,
+    "Agency_department": "EX",
+    "Agency_use": "F",
+    "Contact_title": "MR",
+    "Contact_fname": "N P",
+    "Contact_mname": "",
+    "Contact_lname": "KKR",
+    "Contact_type": ""
   }
-
-
 ]
